--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,14 @@
+.content{
+  width: 70%;
+  background-color: #f9f9f9;
+  font-family: Verdana;
+  margin-top: 20px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 45px;
+  border: 4px solid #ffa500; 
+}
+
 .data{
   text-align: center;
   background: #efefef;
