--- a/styles.css
+++ b/styles.css
@@ -16,13 +16,7 @@ article{
 	margin-bottom: 45px;
 	border: 4px solid #ffa500;
 }
-footer{
-	background: #efefef;
-	padding: 15px 15px 15px 15px;
-	margin-top: 3%;
-	margin-left: 8%;
-	margin-bottom: 8%;
-}
+
 h1 {
 	font-size: 18px;
 }
@@ -48,8 +42,8 @@ p{
 	font-weight: 600;
 	background: #efefef;
 	padding: 15px 15px 15px 15px;
-	margin-left: 8%;
-	width: 30%;
+	margin-left: auto;
+   	margin-right: auto;
 }
 .conteudo{
 	background: #efefef;
@@ -63,7 +57,8 @@ p{
 	background: #efefef;
 	padding: 15px 15px 15px 15px;
 	margin-top: 5%;
-	margin-left: 8%;
+	margin-left: auto;
+   	margin-right: auto;
 	font-size: 16px;
 
 }
