--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,7 @@ p{
 	background: #efefef;
 	padding: 15px 15px 15px 15px;
 	margin-top: 5%;
+	margin-bottom: 5%;
 	margin-left: auto;
    	margin-right: auto;
 	font-size: 16px;
