--- a/styles.css
+++ b/styles.css
@@ -42,8 +42,8 @@ p{
 	font-weight: 600;
 	background: #efefef;
 	padding: 15px 15px 15px 15px;
-	margin-left: auto;
-   	margin-right: auto;
+	margin-left: 8%;
+	margin-right: 8%;
 }
 .conteudo{
 	background: #efefef;
@@ -58,8 +58,8 @@ p{
 	padding: 15px 15px 15px 15px;
 	margin-top: 5%;
 	margin-bottom: 5%;
-	margin-left: auto;
-   	margin-right: auto;
+	margin-left: 8%;
+	margin-right: 8%;
 	font-size: 16px;
 
 }
